# nautilus-folder-icons

./: .editorconfig  .gitignore  README.md  circle.yml  meson.build  meson_options.txt
data/: com.github.bilelmoussaoui.nautilus-folder-icons.metainfo.xml.in  meson.build  nautilus-folder-icons.metainfo.xml.in  nautilus-icons.metainfo.xml.in
po/: LINGUAS  POTFILES  com.github.bilelmoussaoui.nautilus-folder-icons.pot  es_ES.po  fr_FR.po  ja_JP.po  ko_KR.po  meson.build  nautilus-folder-icons.pot  nl_NL.po  pt_BR.po  pt_PT.po
src/: folder-icons.py.in  icons_select.py  icons_utils.py  nautilus-folder-icons.py  nautilus-icons.py  utils.py  widgets.py
src/folder-icons/: icons_select.py  icons_utils.py  utils.py
src/nautilus/: nautilus-folder-icons.py.in
src/nemo/: nemo-folder-icons.py.in
tests/: test_code_format.py  test_utils.py
